sandbox/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: commerce-services-api
  labels:
    service: api
    app: commerce-services
  annotations:
    # alb.ingress.kubernetes.io/....
    external-dns.alpha.kubernetes.io/hostname: api-sandbox.oursaas.org
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: commerce-services-api
                port:
                  number: 80
