sandbox/static-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: commerce-services-static
  labels:
    service: static
    app: commerce-services
  annotations:
    # alb.ingress.kubernetes.io/
    external-dns.alpha.kubernetes.io/hostname: static-sandbox.oursaas.org
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: commerce-services-static
                port:
                  number: 80
